---------------------------------------------------------------------------
Version 4.5.7  [v4-beta] (rgerhards), 2009-11-18
- added a so-called "On Demand Debug" mode, in which debug output can
  be generated only after the process has started, but not right from
  the beginning. This is assumed to be useful for hard-to-find bugs.
  Also improved the doc on the debug system.
- bugfix [imported from 4.4.3]: $ActionExecOnlyOnceEveryInterval did
  not work.
---------------------------------------------------------------------------
Version 4.5.6  [v4-beta] (rgerhards), 2009-11-05
- bugfix: named pipes did no longer work (they always got an open error)
  this was a regression from the omfile rewrite in 4.5.0
- bugfix(minor): diag function returned wrong queue memeber count
  for the main queue if an active DA queue existed. This had no relevance
  to real deployments (assuming they are not running the debug/diagnostic
  module...), but sometimes caused grief and false alerts in the 
  testbench.
- included some important fixes from v4-stable:
  * bugfix: invalid handling of zero-sized messages
  * bugfix: zero-sized UDP messages are no longer processed
  * bugfix: random data could be appended to message
  * bugfix: reverse lookup reduction logic in imudp do DNS queries too often
- bugfix(testbench): testcase did not properly wait for rsyslod shutdown
  thus some unpredictable behavior and a false negative test result
  could occur. [BACKPORTED from v5]
- bugfix(testbench): sequence check was not always performed correctly,
  that could result in tests reporting success when they actually failed
---------------------------------------------------------------------------
Version 4.5.5  [v4-beta] (rgerhards), 2009-10-21
- added $InputTCPServerNotifyOnConnectionClose config directive
  see doc for details
- bugfix: debug string larger than 1K were improperly displayed. Max size
  is now 32K
- bugfix: invalid storage class selected for some size config parameters.